Updating with methods and comments

--- a/webTest/test.properties
+++ b/webTest/test.properties
@@ -1,2 +1,7 @@
 # This is my test.properties file
+browser=Chrome
 testUrl=https://mobile.walmart.com/
+item=socks
+brand=Hanes-Men-s-12-Pack-Crew-Socks
+username=arijit2885@gmail.com
+password=VMware1!
