Adding the chromedriver executables

--- a/webTest/test.properties
+++ b/webTest/test.properties
@@ -1,7 +1,18 @@
 # This is my test.properties file
+
+#Specify the browser type (Chrome,Firefox,Safari,Android)
 browser=Chrome
+
+#Path to chromedriver executable
+driverPath=/Users/chandaa/Downloads/chromedriver
 testUrl=https://mobile.walmart.com/
+
+#item to be searched
 item=socks
+
+#Brand name and item as it appears in the DOM of the item search page
 brand=Hanes-Men-s-12-Pack-Crew-Socks
+
+#username & Password with default shipping address
 username=arijit2885@gmail.com
 password=VMware1!
